# what-not-how

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
doc/: index.rst
docs/: conf.py
examples/cookie_recipe/: cookies.d2  cookies.what
examples/hierarchy/: hierarchy.d2  hierarchy.what
examples/node_types_example/: node_types.d2  node_types.gv  node_types.what
examples/optimizer_tool_sample/: optimizer.d2  optimizer.what
examples/simple/: simple.gv  simple.what
examples/what_not_how/: what_not_how.d2  what_not_how.what
graphviz/: x1.gv  x2.gv
requirements/: base.txt
sample_documents/: cookies.what  example_2.what  example_3.what  example_3_flattened.what  example_3_simplified.what  example_process.what  ns.what  simple_test.what  what_not_how.what
src/what-not-how/: fps_parser.py
src/what_not_how/: diagrams.py  dsl_parser.py  fps_parser.py  graphs.py  model_data.py  model_processing.py  what.py
tests/: test_parse.py  test_parse_whole_file.py
